# TabFMLabs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: datasets.py  inference.py  main.py  schemas.py  store.py
backend/tests/: test_api.py  test_ensemble.py
deploy/hf-space/: README.md  deploy.sh
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.css  App.tsx  api.ts  demoFiles.ts  index.css
frontend/src/assets/: demo.csv  demo_workbook.xlsx
frontend/src/components/: DataGrid.tsx  DistributionChart.tsx  Hero.tsx  SidePanel.tsx  TopBar.tsx  Tutorial.tsx
sample_data/: customer_churn.csv  messy_sales_report.csv
