[project]
name = "tabfm-studio-backend"
version = "0.1.0"
description = "FastAPI backend wrapping the TabFM tabular foundation model"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "tabfm[pytorch]",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
