[project]
name = "tabfm-studio-backend"
version = "0.1.0"
description = "FastAPI backend wrapping the TabFM tabular foundation model"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "tabfm[pytorch]",
    "safetensors",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

# The runtime data/ directory must not be picked up as a package — with it
# present, setuptools' flat-layout auto-discovery makes any reinstall fail.
[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
